--- a/css/diagnostics.css
+++ b/css/diagnostics.css
@@ -389,7 +389,7 @@ a {
   align-items: center;
   margin-top: 100px;
   padding-bottom: 20px;
-  color: rgba(255, 255, 255, 0.7);
+  color: #ffffff;
 }
 @media screen and (max-width: 1100px) {
   .footer-rteco__logo {
@@ -400,7 +400,7 @@ a {
   }
 }
 .footer-rteco__logo p {
-  font-size: 12px;
+  font-size: 14px;
 }
 @media screen and (max-width: 768px) {
   .footer-rteco__logo p {
@@ -678,6 +678,13 @@ a {
   }
 }
 
+.open .accordion-content {
+  padding-top: 30px;
+}
+.open .accordion-header__image .plus-button {
+  display: none;
+}
+
 .accordion {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -685,7 +692,7 @@ a {
 }
 .accordion-header {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   cursor: pointer;
 }
@@ -693,6 +700,7 @@ a {
   position: relative;
 }
 .accordion-header__image .minus-button {
+  transition: all 0.5s linear;
   position: absolute;
   transform: translateX(-36px);
 }
@@ -701,7 +709,8 @@ a {
   overflow: hidden;
   width: 90%;
   transition: 0.3s;
-  padding: 30px;
+  height: 0;
+  transition: all 0.5s linear;
 }
 @media screen and (max-width: 768px) {
   .accordion-content {
@@ -710,6 +719,7 @@ a {
   }
 }
 .accordion-content p {
+  padding-left: 50px;
   width: 90%;
   font-size: 16px;
   font-weight: 500;
