--- a/css/home-page.css
+++ b/css/home-page.css
@@ -389,7 +389,7 @@ a {
   align-items: center;
   margin-top: 100px;
   padding-bottom: 20px;
-  color: rgba(255, 255, 255, 0.7);
+  color: #ffffff;
 }
 @media screen and (max-width: 1100px) {
   .footer-rteco__logo {
@@ -400,7 +400,7 @@ a {
   }
 }
 .footer-rteco__logo p {
-  font-size: 12px;
+  font-size: 14px;
 }
 @media screen and (max-width: 768px) {
   .footer-rteco__logo p {
@@ -455,7 +455,7 @@ a {
   flex-direction: column;
 }
 .main-content {
-  padding-top: 50px;
+  padding-top: 80px;
 }
 .main-content__title {
   width: 80%;
@@ -605,7 +605,7 @@ a {
   border-radius: 10px;
   background-color: #f4f4f4;
   margin-top: 30px;
-  transition: all 0.3s ease-out;
+  transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
 @media screen and (max-width: 500px) {
@@ -981,9 +981,12 @@ a {
   cursor: pointer;
 }
 .request-image {
-  width: 30%;
+  width: 50%;
   height: 100%;
   position: relative;
+  display: flex;
+  justify-content: center;
+  background-image: radial-gradient(#ffffff, #f4c93f, #f4c93f);
 }
 @media screen and (max-width: 768px) {
   .request-image {
