--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -16,7 +16,7 @@
   flex-direction: column;
 
   &-content {
-    padding-top: 50px;
+    padding-top: 80px;
 
     &__title {
       width: 80%;
@@ -172,7 +172,7 @@
       border-radius: 10px;
       background-color: #f4f4f4;
       margin-top: 30px;
-      transition: all 0.3s ease-out;
+      transition: all 0.5s ease-in-out;
       cursor: pointer;
 
       @media screen and (max-width: 500px) {
@@ -554,9 +554,13 @@
   }
 
   &-image {
-    width: 30%;
+    width: 50%;
     height: 100%;
     position: relative;
+    display: flex;
+    justify-content: center;
+
+    background-image: radial-gradient(#ffffff, #f4c93f, #f4c93f);
 
     @media screen and (max-width: 768px) {
       display: none;
