--- a/scss/services.scss
+++ b/scss/services.scss
@@ -35,6 +35,26 @@
 .information-box {
   margin-top: 100px;
   padding: 30px;
+
+  @media screen and (max-width: 768px) {
+    padding: 0;
+  }
+
+  .open {
+    .accordion-content {
+      margin-top: 20px;
+      height: fit-content;
+
+      @media screen and (max-width: 768px) {
+        margin-top: 15px;
+      }
+    }
+    .accordion-header__image {
+      .plus-button {
+        display: none;
+      }
+    }
+  }
 }
 
 .accordion {
@@ -44,16 +64,52 @@
 
   &-header {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     cursor: pointer;
+
+    &__title {
+      position: relative;
+      padding-left: 40px;
+      font-size: 28px;
+
+      @media screen and (max-width: 768px) {
+        font-size: 24px;
+        padding-left: 20px;
+      }
+
+      &::before {
+        position: absolute;
+        left: 20px;
+        top: 40%;
+        content: "";
+        width: 7px;
+        height: 7px;
+        background: #000000;
+        border-radius: 50%;
+
+        @media screen and (max-width: 768px) {
+          left: 0;
+        }
+      }
+    }
 
     &__image {
       position: relative;
 
+      img {
+        @media screen and (max-width: 768px) {
+          width: 25px;
+        }
+      }
+
       .minus-button {
         position: absolute;
         transform: translateX(-36px);
+
+        @media screen and (max-width: 768px) {
+          transform: translateX(-25px);
+        }
       }
     }
   }
@@ -62,8 +118,14 @@
     position: relative;
     overflow: hidden;
     width: 90%;
+    height: 0;
     transition: 0.3s;
-    padding: 30px;
+    padding-left: 60px;
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      padding-left: 20px;
+    }
 
     p {
       width: 90%;
@@ -71,6 +133,10 @@
       font-weight: 500;
       line-height: 31px;
       opacity: 0.5;
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+      }
     }
 
     &.accordion.active {
@@ -84,11 +150,22 @@
   margin-top: 100px;
   margin-bottom: 100px;
 
+  &-title{
+    @media screen and (max-width: 500px) {
+      font-size: 25px;
+    }
+  }
+
   .items-wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 50px;
+    flex-wrap: wrap;
+
+    @media screen and (max-width: 1100px) {
+      flex-direction: column;
+    }
 
     .item {
       width: 32%;
@@ -96,6 +173,20 @@
       background: #fff;
       padding: 30px;
       box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.08);
+
+      @media screen and (max-width: 1100px) {
+        width: 50%;
+        margin-bottom: 30px;
+      }
+
+      @media screen and (max-width: 768px) {
+        width: 80%;
+        margin-bottom: 30px;
+      }
+
+      @media screen and (max-width: 500px) {
+        width: 100%;
+      }
 
       &-image {
         width: 100%;
@@ -105,6 +196,10 @@
         img {
           width: 70%;
           height: 70%;
+
+          @media screen and (max-width: 500px) {
+            height: 50%;
+          }
 
           &:last-child {
             width: fit-content;
@@ -171,6 +266,10 @@
       background: #000000;
       margin-left: 15px;
       margin-right: 15px;
+
+      @media screen and (max-width: 500px) {
+        width: 100px;
+      }
     }
   }
 }
